<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".RegisterFlow.Password">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingBottom="10dp"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:text="Ingresa una contraseña segura para iniciar sesión."
            style="@style/Title"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_password_input"
            style="@style/BoxTextLayoutNormal"
            android:hint="@string/value_edtxt_password"
            app:endIconMode="password_toggle"
            android:paddingTop="20dp">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/EditTextNormal"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_confirm_password_input"
            style="@style/BoxTextLayoutNormal"
            android:hint="@string/value_edtxt_password_confirm"
            app:endIconMode="password_toggle"
            android:paddingTop="20dp">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/EditTextNormal"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_confirm"
            style="@style/ButtonNormal"
            android:text="@string/value_btn_accept"
            android:layout_marginTop="30dp"
            />

        <TextView
            style="@style/Subtitle2"
            android:text="@string/value_txt_privacy_policy"
            android:paddingTop="20dp"/>
    </LinearLayout>

</FrameLayout>